# mp-checkmate

./: README.md
macro-place/: .gitignore  README.md  pyproject.toml
macro-place/docs/: architecture.md
macro-place/scripts/: diagnose.py  setup_benchmarks.sh
macro-place/src/macroplace/: __init__.py  scripts_entry.py
macro-place/src/macroplace/diagnostic/: __init__.py  harness.py  report.py  visualize.py
macro-place/src/macroplace/eval/: __init__.py  critical_path.py  overlap.py  proxy_cost.py
macro-place/src/macroplace/io/: __init__.py  loader.py
macro-place/src/macroplace/stages/: __init__.py
macro-place/tests/: test_smoke.py
