[project]
name = "macroplace"
version = "0.1.0"
description = "Macro placement pipeline for the Partcl/HRT 2026 challenge."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Dev Chaudhari" },
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "torch>=2.2",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    # TILOS PlacementCost evaluator and helpers live in this submodule:
    # we'll wire it up as an editable path dependency once it's vendored.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ipython>=8.0",
    "ruff>=0.5",
]

[project.scripts]
mp-diagnose = "macroplace.scripts_entry:diagnose_main"
mp-pipeline = "macroplace.scripts_entry:pipeline_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/macroplace"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
