[project]
name = "macroplace"
version = "0.1.0"
description = "Macro placement pipeline for the Partcl/HRT 2026 challenge."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    # torch installed separately via conda or pip — version pinning is
    # platform-specific (CUDA wheels on Linux, conda-forge on Intel Mac, etc.)
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ipython>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/macroplace"]